// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Debounce Text Field renders 1`] = `
<TextField
  addOnAfter={
    <div
      id="after_addon"
    >
      after
    </div>
  }
  addOnBefore={
    <div
      id="before_addon"
    >
      before
    </div>
  }
  delay={100}
  disabled={false}
  helpText={null}
  input={
    Object {
      "name": "fieldName",
      "onChange": [Function],
    }
  }
  label="Text Test"
  meta={
    Object {
      "form": "formName",
      "pristine": false,
    }
  }
  required={false}
  type="text"
  validator={[Function]}
>
  <FormGroup
    bsClass="form-group"
    controlId="fieldName"
  >
    <div
      className="form-group"
    >
      <Label
        label="Text Test"
        required={false}
      >
        <ControlLabel
          bsClass="control-label"
          srOnly={false}
        >
          <label
            className="control-label"
            htmlFor="fieldName"
          >
            Text Test
          </label>
        </ControlLabel>
      </Label>
      <InputGroup
        bsClass="input-group"
        style={Object {}}
      >
        <span
          className="input-group"
          style={Object {}}
        >
          <div
            id="before_addon"
          >
            before
          </div>
          <FormControl
            bsClass="form-control"
            componentClass="input"
            disabled={false}
            name="fieldName"
            onChange={[Function]}
            style={
              Object {
                "zIndex": "0",
              }
            }
            type="text"
          >
            <input
              className="form-control"
              disabled={false}
              id="fieldName"
              name="fieldName"
              onChange={[Function]}
              style={
                Object {
                  "zIndex": "0",
                }
              }
              type="text"
            />
          </FormControl>
          <div
            id="after_addon"
          >
            after
          </div>
        </span>
      </InputGroup>
      <HelpBlock
        bsClass="help-block"
        style={
          Object {
            "minHeight": "3ex",
          }
        }
      >
        <span
          className="help-block"
          style={
            Object {
              "minHeight": "3ex",
            }
          }
        />
      </HelpBlock>
    </div>
  </FormGroup>
</TextField>
`;

exports[`The Debounce Text Field renders the help message with a break 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
  validationState={null}
>
  <Label
    label="Text Test"
    required={false}
  />
  <InputGroup
    bsClass="input-group"
    style={Object {}}
  >
    <div
      id="before_addon"
    >
      before
    </div>
    <FormControl
      bsClass="form-control"
      componentClass="input"
      disabled={false}
      name="fieldName"
      onChange={[Function]}
      style={
        Object {
          "zIndex": "0",
        }
      }
      type="text"
    />
    <div
      id="after_addon"
    >
      after
    </div>
  </InputGroup>
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "6ex",
      }
    }
  >
    There was an error
    <br />
    The help Text
  </HelpBlock>
</FormGroup>
`;
